<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <developers>
        <developer>
            <id>lukas</id>
            <name>Lukas Krecan</name>
            <email>lukas@krecan.net</email>
        </developer>
    </developers>

    <groupId>net.javacrumbs.shedlock</groupId>
    <artifactId>shedlock-parent</artifactId>
    <packaging>pom</packaging>
    <version>5.0.0-SNAPSHOT</version>
    <modules>
        <module>shedlock-bom</module>
        <module>shedlock-core</module>
        <module>cdi/shedlock-cdi-vintage</module>
        <module>cdi/test/quarkus-test</module>
        <module>micronaut/shedlock-micronaut</module>
        <module>micronaut/test/micronaut-jdbc</module>
        <module>micronaut/test/micronaut-jdbc-template</module>
        <module>spring/shedlock-spring</module>
        <module>spring/test/shedlock-springboot-old-test</module>
        <module>spring/test/shedlock-springboot-test</module>
        <module>spring/test/shedlock-springboot-future-test</module>
        <module>spring/test/shedlock-springboot-sleuth-test</module>
        <module>spring/test/shedlock-springboot-kotlin-test</module>
        <module>spring/test/shedlock-testng-test</module>
        <module>shedlock-test-support</module>
        <module>providers/etcd/shedlock-provider-etcd-jetcd</module>
        <module>providers/hazelcast/shedlock-provider-hazelcast4</module>
        <module>providers/jdbc/shedlock-test-support-jdbc</module>
        <module>providers/jdbc/shedlock-provider-jdbc-internal</module>
        <module>providers/jdbc/shedlock-provider-jdbc</module>
        <module>providers/jdbc/shedlock-provider-jooq</module>
        <module>providers/jdbc/shedlock-provider-jdbc-template</module>
        <module>providers/jdbc/shedlock-provider-jdbc-micronaut</module>
        <module>providers/r2dbc/shedlock-provider-r2dbc</module>
        <module>providers/mongo/shedlock-provider-mongo</module>
        <module>providers/mongo/shedlock-provider-mongo-reactivestreams</module>
        <module>providers/neo4j/shedlock-provider-neo4j</module>
        <module>providers/elasticsearch/shedlock-provider-elasticsearch8</module>
        <module>providers/opensearch/shedlock-provider-opensearch</module>
        <module>providers/couchbase/shedlock-provider-couchbase-javaclient3</module>
        <module>providers/zookeeper/shedlock-provider-zookeeper-curator</module>
        <module>providers/redis/shedlock-provider-redis-jedis4</module>
        <module>providers/redis/shedlock-provider-redis-spring</module>
        <module>providers/dynamodb/shedlock-provider-dynamodb2</module>
        <module>providers/cassandra/shedlock-provider-cassandra</module>
        <module>providers/consul/shedlock-provider-consul</module>
        <module>providers/arangodb/shedlock-provider-arangodb</module>
        <module>providers/ignite/shedlock-provider-ignite</module>
        <module>providers/inmemory/shedlock-provider-inmemory</module>
        <module>providers/memcached/shedlock-provider-memcached-spy</module>
    </modules>

    <properties>
        <spring.version>5.3.23</spring.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>11</jdk.version>
        <spring-boot-current.version>2.7.4</spring-boot-current.version>
        <junit.ver>5.9.1</junit.ver>
        <test-containers.ver>1.17.6</test-containers.ver>
        <kotlin.ver>1.7.20</kotlin.ver>
        <micronaut.ver>3.5.1</micronaut.ver>
        <micronaut-data.ver>3.4.2</micronaut-data.ver>
        <logback.ver>1.4.4</logback.ver>
        <awaitility.ver>4.2.0</awaitility.ver>
        <assertj.ver>3.23.1</assertj.ver>
        <mockito.ver>4.9.0</mockito.ver>
        <slf4j.ver>2.0.3</slf4j.ver>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <release>${jdk.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.1</version>
                <configuration>
                    <header>header.txt</header>
                    <excludes>
                        <exclude>LICENSE.txt</exclude>
                        <exclude>*.xml</exclude>
                        <exclude>*.properties</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <forkCount>4</forkCount>
                    <argLine>-Xmx512m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <!-- https://bugs.openjdk.java.net/browse/JDK-8212233 -->
                    <source>8</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <configuration>
                            <keyname>C51E10BD96D06071</keyname>
                        </configuration>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.12.0</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>permit-illegal-access</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>--illegal-access=permit</argLine>
                            <forkCount>4</forkCount>
                            <argLine>-Xmx512m</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:git@github.com:lukas-krecan/ShedLock.git</connection>
        <developerConnection>scm:git:git@github.com:lukas-krecan/ShedLock.git</developerConnection>
        <url>scm:git:git@github.com:lukas-krecan/ShedLock.git</url>
    </scm>
</project>
